[project]
name = "7-depth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "onnx>=1.18.0",
    "onnxruntime-gpu>=1.22.0",
    "pycuda>=2025.1.1",
    "tensorrt==10.3.0",
]
